fixed message language for improve & loading screen

--- a/Modacity/Modacity/ViewController/Improve/improve.storyboard
+++ b/Modacity/Modacity/ViewController/Improve/improve.storyboard
@@ -121,9 +121,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J8a-Y6-gKl">
-                                <rect key="frame" x="87.5" y="72" width="200" height="38.5"/>
+                                <rect key="frame" x="102" y="72" width="171" height="38.5"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="What's ">
+                                    <fragment content="What ">
                                         <attributes>
                                             <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <font key="NSFont" size="16" name="Lato-Bold"/>
@@ -138,8 +138,8 @@
                                         </attributes>
                                     </fragment>
                                     <fragment>
-                                        <string key="content"> thing you would 
-like to improve?</string>
+                                        <string key="content"> thing will you 
+now improve?</string>
                                         <attributes>
                                             <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <font key="NSFont" size="16" name="Lato-Bold"/>
@@ -319,9 +319,11 @@ like to improve?</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sm0-yO-zPq">
-                                <rect key="frame" x="88.5" y="72" width="198.5" height="19.5"/>
+                                <rect key="frame" x="91" y="72" width="193.5" height="38.5"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="What strategy will you test?">
+                                    <fragment>
+                                        <string key="content">What strategy will you try 
+to make this improvement?</string>
                                         <attributes>
                                             <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <font key="NSFont" size="16" name="Lato-Bold"/>
@@ -332,7 +334,7 @@ like to improve?</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d3K-3Q-jhR">
-                                <rect key="frame" x="29.5" y="111.5" width="316" height="53"/>
+                                <rect key="frame" x="29.5" y="130.5" width="316" height="53"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_inputfield" translatesAutoresizingMaskIntoConstraints="NO" id="0Nu-mv-y7N">
                                         <rect key="frame" x="0.0" y="0.0" width="316" height="53"/>
