Trello item issues fixed on improvement textfields case-sensitive, misc-practice items statistics,  playback speed issue, audio converting for m4a

--- a/Modacity/Modacity/ViewController/Improve/improve.storyboard
+++ b/Modacity/Modacity/ViewController/Improve/improve.storyboard
@@ -161,7 +161,7 @@
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
-                                        <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
                                             <action selector="onDidEndOnExit:" destination="XIS-Ip-IXR" eventType="editingDidEndOnExit" id="0Um-No-mfd"/>
                                             <action selector="onEditingChangedOnField:" destination="XIS-Ip-IXR" eventType="editingChanged" id="TpK-6f-k0j"/>
@@ -346,7 +346,7 @@ to make this improvement?</string>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
-                                        <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
                                             <action selector="onDidEndOnExit:" destination="EEk-em-v4u" eventType="editingDidEndOnExit" id="HIx-pa-yor"/>
                                             <action selector="onEditingChanged:" destination="EEk-em-v4u" eventType="editingChanged" id="Slm-mQ-xzc"/>
