--- a/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
+++ b/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -461,6 +461,7 @@
                                 <connections>
                                     <action selector="onDidEndOnExitOnNameInputField:" destination="2UX-vR-wCX" eventType="editingDidEndOnExit" id="SPA-eI-bda"/>
                                     <action selector="onEditingChangedOnNameInputField:" destination="2UX-vR-wCX" eventType="editingChanged" id="iNg-Hb-WPL"/>
+                                    <action selector="onEditingDidEndOnNameField:" destination="2UX-vR-wCX" eventType="editingDidEnd" id="R3G-jA-CW0"/>
                                     <outlet property="delegate" destination="2UX-vR-wCX" id="WJg-ai-DbK"/>
                                 </connections>
                             </textField>
